refactor(sql): fix SonarQube issues in SQL generation code